@@ -8,12 +8,17 @@ pushd %basedir%
 
 @set mainclass=com.aliyun.openservices.odps.console.ODPSConsole
 @set libpath=%cd%\..\lib\
+@set mrlibpath=%cd%\..\lib\mapreduce-api.jar
 @set confpath=%cd%\..\conf\
-@set classpath=.;!confpath!;!libpath!\*
+@set classpath=.;!confpath!;!mrlibpath!;!libpath!\*
+
+@set java9opt=
+java -version 2>&1 | findstr /c:"build 9" > nul
+if %errorlevel% == 0 @set java9opt=--add-modules=java.xml.bind
 
 rem set java env
 popd
-java -Xms64m -Xmx512m -classpath !classpath! %mainclass% %*
+java -Xms64m -Xmx512m %java9opt% -classpath "!classpath!" %mainclass% %*
 
 if errorlevel 1 (
   if %argC% == 0 (
